--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
                 <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
             </div>
             <ul class="nav-links">
-                <li><a href="#Home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About Us</a></li>
-                <li><a href="#team">Team</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="pastevent.html">Past Event</a></li>
                 <li><a href="#">Brochure</a></li>
