--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="team.html" class="active">Team</a></li>
-                <li><a href="events.html">Past Events</a></li>
+                <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="brochure.html">Brochure</a></li>
             </ul>
         </nav>
