--- a/pastevent.html
+++ b/pastevent.html
@@ -67,6 +67,56 @@
                 <p>Showcased the impact of digital transformation on industries.</p>
             </div>
         </div>
+
+         <div class="speaker">
+            <img src="images/pratishtha.jpg" alt="Pratishtha Thakur Haritwal ">
+            <div class="speaker-info">
+                <strong>Pratishtha Thakur Haritwal (Taxation Officer, Ex-IT Professional)</strong>
+                <p>Spoke about her career shift from IT to public service.</p>
+                <p>Discussed personal reinvention and following one’s calling.</p>                    
+                <p>Showed how resilience leads to meaningful impact.</p>
+            </div>
+        </div>
+
+        <div class="speaker">
+            <img src="images/ratanlal.jpg" alt="Ratan Lal Dangi, ">
+            <div class="speaker-info">
+                <strong>Ratan Lal Dangi, IPS (Inspector General of Police, Raipur)</strong>
+                <p>Reflected on social initiatives and mentoring youth.</p>
+                <p>Highlighted the importance of leadership in public service.</p>                    
+                <p>Inspired change-makers to take responsibility for society.</p>
+            </div>
+        </div>
+
+        <div class="speaker">
+            <img src="images/yashlahoti.jpg" alt="Yash Lahoti ">
+            <div class="speaker-info">
+                <strong>Yash Lahoti (Founder, Women's CricZone & Women's Sportszone)</strong>
+                <p>Advocated for better representation of women in sports.</p>
+                <p>Showcased how the media can shape narratives.</p>                    
+                <p>Encouraged breaking barriers in male-dominated fields.</p>
+            </div>
+        </div>
+
+        <div class="speaker">
+            <img src="images/shashank.jpg" alt="Shashank Vishwakarma">
+            <div class="speaker-info">
+                <strong>Shashank Vishwakarma (Finger-Tutting Artist)</strong>
+                <p>Demonstrated how creativity fuels self-discovery.</p>
+                <p>Showed how unconventional art forms can inspire change.</p>                    
+                <p>Encouraged perseverance in passion-driven careers.</p>
+            </div>
+        </div>
+
+        <div class="speaker">
+            <img src="images/palash.jpg" alt="Palash Live">
+            <div class="speaker-info">
+                <strong>Palash Live (Musical Performance)</strong>
+                <p>Blended music with the theme of transformation.</p>
+                <p>Created an immersive experience of energy and change.</p>                    
+                <p>Reinforced the power of artistic expression.</p>
+            </div>
+        </div>
     
     </section>
     
