--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo hero-logo">
             <h1 id="typewriter"></h1>
             <p class="description">The invisible threads that shape us</p>
-            <a href="#" class="btn">Book now</a>
+            <a href="register.html" class="btn">Book now</a>
         </div>
     </section>
 
@@ -73,9 +73,9 @@
         </section>
 
         <section class="tedx-mitwpu">
-            <h2>TEDxMITWPU - Building a Strong Identity</h2>
-            <p>MIT World Peace University envisions a world shaped by tradition, innovation, and peace. TEDx fosters change through ideas that inspire, transform and change. Together, TEDxMITWPU brings these values to life–where knowledge meets wisdom, individuality meets impact, and diverse identities weave a shared future.</p>
-            <p>Through thought-provoking talks and meaningful conversations, TEDxMITWPU ignites curiosity, self-discovery, and global change — one idea at a time.</p>
+            <h2>What is MITWPU?</h2>
+            <p>MIT World Peace University (MIT-WPU) is a premier institution dedicated to shaping future leaders by blending traditional Indian values with modern advancements. With a strong emphasis on academic excellence, innovation, and social impact, MIT-WPU nurtures individuals who strive for global peace, harmony, and progress.</p>
+            <p>Through its interdisciplinary approach and commitment to holistic education, the university empowers students to think critically, lead with purpose, and contribute meaningfully to society.</p>
         </section>
         
         <section class="theme-section">
