--- a/pastevent.html
+++ b/pastevent.html
@@ -24,7 +24,7 @@
     </header>
 
     <section class="past-event">
-        <h2>TEDxMITWPU 2023 - Flip the Switch</h2>
+        <h2>TEDxMITWPU - Flip the Switch</h2>
         <p>Theme: An epiphany, a moment of transformation– “Flip The Switch” was about embracing change, taking risks, and rewriting one’s path.</p>
         <h3>Speaker Highlights</h3>
     
