--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="pastevent.html">Past Event</a></li>
                 <li><a href="#">Brochure</a></li>
