--- a/pastevent.html
+++ b/pastevent.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#">Team</a></li>
-                <li><a href="past-events.html">Past Events</a></li>
+                <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="#">Brochure</a></li>
             </ul>
             <div class="menu-btn">☰</div>
