--- a/pastevent.html
+++ b/pastevent.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="#">Brochure</a></li>
             </ul>
