--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     </head>
     <body>
         <header>
+        <nav>
+            <div class="nav-left">
+                <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
+            </div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="team.html">Team</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#">Team</a></li>               
                 <li><a href="pastevent.html">Past Event</a></li>
                 <li><a href="#">Brochure</a></li>
             </ul>
