--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
         <nav>
             <div class="nav-left">
+                <a href="index.html">
                 <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
             </div>
             <ul class="nav-links">
