--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
             </div>
             <ul class="nav-links">
-                <li><a href="indx.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>               
                 <li><a href="pastevent.html">Past Event</a></li>
