--- a/team.html
+++ b/team.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Crew - TEDxMITWPU</title>
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="footer.css">
+
 <body>
     <header>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html" class="active">Team</a></li>
                 <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="brochure.html">Brochure</a></li>
@@ -53,6 +56,13 @@
             </div>
         </div>
     </section>
+    <script>
+        fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
     
 </body>
 </html>
