--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <header>
         <nav>
             <div class="nav-left">
+                <a href="index.html" class="logo-link">
                 <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
             </div>
             <ul class="nav-links">
                 <li><a href="indx.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>               
-                <li><a href="pastevent.html">Past Event</a></li>
+                <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="#">Brochure</a></li>
             </ul>
             <div class="menu-btn">☰</div>
