--- a/aboutus.html
+++ b/aboutus.html
@@ -11,8 +11,10 @@
     <header>
         <nav>
             <div class="nav-left">
-                <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
-            </div>
+                <a href="index.html" class="logo-link">
+                    <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
+                </a>
+            </div>  
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
