--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>               
-                <li><a href="pastevent.html">Past Event</a></li>
+                <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="#">Brochure</a></li>
             </ul>
             <div class="menu-btn">☰</div>
