--- a/team.html
+++ b/team.html
@@ -6,15 +6,21 @@
     <title>Team Crew - TEDxMITWPU</title>
     <link rel="stylesheet" href="team.css">
 <body>
-    <header>
+     <header>
         <nav>
+            <div class="nav-left">
+            <a href="index.html" class="logo-link">
+            <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
+            </a>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="team.html" class="active">Team</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="team.html">Team</a></li>               
                 <li><a href="pastevent.html">Past Events</a></li>
-                <li><a href="brochure.html">Brochure</a></li>
+                <li><a href="#">Brochure</a></li>
             </ul>
+            <div class="menu-btn">☰</div>
         </nav>
     </header>
 
