--- a/index.html
+++ b/index.html
@@ -76,5 +76,14 @@
     </section>
     
     <script src="index.js"></script>
+    <script>
+        fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+    
+   
 </body>
 </html>
