--- a/register.html
+++ b/register.html
@@ -68,5 +68,13 @@
             collegeField.style.display = mitNo.checked ? "block" : "none";
         }
     </script>
+    <script>
+        fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+    
 </body>
 </html>
