--- a/team.html
+++ b/team.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Crew - TEDxMITWPU</title>
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="index.css">
 <body>
      <header>
         <nav>
@@ -59,6 +60,13 @@
             </div>
         </div>
     </section>
+    <script>
+        fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
     
 </body>
 </html>
