--- a/index.html
+++ b/index.html
@@ -36,50 +36,48 @@
             <a href="register.html" class="btn">Book now</a>
         </div>
     </section>
-<section class="other-sections">
-    <section class="theme-section">
-        <h2>Theme: Threads of Identity </h2>
-        <p>Like a horizon over the sea, identity expands and transforms with time. TEDxMITWPU seeks to uncover hidden
-            facets of selfhood, forging new connections and discoveries.</p>
-        <p>Balancing our many selves is never easy, yet it is through this very act that we embark on a profound journey
-            of self-discovery. Identity may never be fully defined—but isn’t that the beauty of unravelling it?</p>
+    <section class="other-sections">
+        <section class="theme-section">
+            <h2>Theme: Threads of Identity </h2>
+            <p>Like a horizon over the sea, identity expands and transforms with time. TEDxMITWPU seeks to uncover
+                hidden
+                facets of selfhood, forging new connections and discoveries.</p>
+            <p>Balancing our many selves is never easy, yet it is through this very act that we embark on a profound
+                journey
+                of self-discovery. Identity may never be fully defined—but isn’t that the beauty of unravelling it?</p>
+        </section>
+        <section id="team" class="team-crew">
+            <h2>Meet the Team</h2>
+            <p>TEDxMITWPU is powered by a dedicated team, each contributing to the vision of <strong>Threads of
+                    Identity</strong>.</p>
+            <div class="team-grid">
+                <!-- Organizer -->
+                <div class="team-member">
+                    <img src="images/organizer.jpg" alt="Organizer Name">
+                    <h3>Organizer Name</h3>
+                    <p>Lead Organizer - The backbone of TEDxMITWPU.</p>
+                </div>
+                <!-- Curators -->
+                <div class="team-member">
+                    <img src="images/curator.jpg" alt="Curator Name">
+                    <h3>Curator Name</h3>
+                    <p>Curator - Bringing inspiring speakers and ideas.</p>
+                </div>
+                <!-- Marketing Head -->
+                <div class="team-member">
+                    <img src="images/marketing.jpg" alt="Marketing Name">
+                    <h3>Marketing Head</h3>
+                    <p>Marketing & Outreach - Spreading TEDxMITWPU’s impact.</p>
+                </div>
+                <!-- Technical Team -->
+                <div class="team-member">
+                    <img src="images/tech.jpg" alt="Technical Name">
+                    <h3>Technical Lead</h3>
+                    <p>Ensuring a seamless event experience.</p>
+                </div>
+            </div>
+        </section>
     </section>
-    <section id="team" class="team-crew">
-        <h2>Meet the Team</h2>
-        <p>TEDxMITWPU is powered by a dedicated team, each contributing to the vision of <strong>Threads of
-                Identity</strong>.</p>
-
-        <div class="team-grid">
-            <!-- Organizer -->
-            <div class="team-member">
-                <img src="images/organizer.jpg" alt="Organizer Name">
-                <h3>Organizer Name</h3>
-                <p>Lead Organizer - The backbone of TEDxMITWPU.</p>
-            </div>
-
-            <!-- Curators -->
-            <div class="team-member">
-                <img src="images/curator.jpg" alt="Curator Name">
-                <h3>Curator Name</h3>
-                <p>Curator - Bringing inspiring speakers and ideas.</p>
-            </div>
-
-            <!-- Marketing Head -->
-            <div class="team-member">
-                <img src="images/marketing.jpg" alt="Marketing Name">
-                <h3>Marketing Head</h3>
-                <p>Marketing & Outreach - Spreading TEDxMITWPU’s impact.</p>
-            </div>
-
-            <!-- Technical Team -->
-            <div class="team-member">
-                <img src="images/tech.jpg" alt="Technical Name">
-                <h3>Technical Lead</h3>
-                <p>Ensuring a seamless event experience.</p>
-            </div>
-        </div>
-    </section>
-</section>
     <script src="index.js"></script>
     <script>
         fetch("footer.html")
