--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="hero">
         <div class="content">
-            <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo hero-logo">
+            <img src="images/IMG_2748.PNG" alt="TEDxMITWPU Logo" class="logo hero-logo">
             <h1 id="typewriter"></h1>
             <p class="description">The invisible threads that shape us</p>
             <a href="register.html" class="btn">Book now</a>
