--- a/team.html
+++ b/team.html
@@ -383,7 +383,7 @@
       <nav>
         <div class="nav-left">
           <a href="index.html" class="logo-link">
-            <img src="tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
+            <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
           </a>
         </div>
         <ul class="nav-links" id="navLinks">
