--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
       }
 
       body {
-        background: url('HOME 2.png') no-repeat center center;
+        background: url('images/HOME 2.png') no-repeat center center;
         background-size: cover;
         background-attachment: fixed;
         min-height: 100vh;
