--- a/aboutus.html
+++ b/aboutus.html
@@ -116,6 +116,7 @@
         </section>
     </div>
 
+  <script src="index.js"></script>
     <script>
         fetch("footer.html")
             .then(response => response.text())
