--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: var(--header-bg);
+        background: rgba(0, 0, 0, 0.8);
         z-index: 1000;
       }
 
