--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="indx.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="pastevent.html">Past Events</a></li>
