--- a/aboutus.html
+++ b/aboutus.html
@@ -74,6 +74,8 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>               
                 <li><a href="pastevent.html">Past Event</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="guidelines.html">Guidelines</a></li>
             </ul>
             <div class="menu-btn">☰</div>
         </nav>
