--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="pastevent.html">Past Events</a></li>
-
+                <li><a href="team.html">Team</a></li>               
+                <li><a href="pastevent.html">Past Event</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="guidelines.html">Guidelines</a></li>
             </ul>
             <div class="menu-btn">☰</div>
         </nav>
@@ -33,7 +34,7 @@
             <img src="images/IMG_2748.PNG" alt="TEDxMITWPU Logo" class="logo hero-logo">
             <h1 id="typewriter"></h1>
             <p class="description">The invisible threads that shape us</p>
-            <a href="/ticket/register.html" class="btn">Book now</a>
+            <a href="ticket/register.html" class="btn">Book now</a>
         </div>
     </section>
     <section class="other-sections">
