--- a/pastevent.html
+++ b/pastevent.html
@@ -549,10 +549,11 @@ footer {
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
-      <li><a href="aboutus.html">About Us</a></li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="pastevent.html">Past Events</a></li>
-      
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="team.html">Team</a></li>               
+                <li><a href="pastevent.html">Past Event</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="guidelines.html">Guidelines</a></li>
     </ul>
     <div class="menu-btn" id="hamburger">☰</div>
   </nav>
