--- a/guidelines.html
+++ b/guidelines.html
@@ -29,6 +29,272 @@
             margin-top: 100px;
             font-size: 2.5em;
         }
+        
+/* FOOTER */
+.modern-footer {
+    background-color: #131314;
+    padding: 40px 20px;
+    color: #fff;
+}
+
+.footer-container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+.footer-row {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    gap: 40px;
+    align-items: center;
+}
+
+.footer-logo {
+    width: 140px;
+    margin-bottom: 10px;
+}
+
+.logo-section p {
+    color: #ccc;
+    font-size: 14px;
+}
+
+.nav-section ul {
+    display: flex;
+    gap: 30px;
+    list-style: none;
+}
+
+.nav-section a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+.nav-section a:hover {
+    color: #ff2b06;
+}
+
+.map-section iframe {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    border: none;
+}
+
+/* RESPONSIVE DESIGN */
+@media screen and (max-width: 768px) {
+    .nav-links {
+        flex-direction: column;
+        display: none;
+        background: rgba(0, 0, 0, 0.95);
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 200px;
+        padding: 15px;
+        z-index: 999;
+    }
+
+    .menu-btn {
+        display: block;
+        z-index: 1001;
+    }
+
+    .content {
+        padding: 20px;
+    }
+
+    .info-box {
+        width: 90%;
+        align-self: center !important;
+    }
+
+    .footer-row {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .nav-section ul {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .map-section iframe {
+        height: 220px;
+    }
+
+    .logo {
+        height: 30px;
+    }
+
+    header {
+        padding: 10px 20px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .about-heading {
+        font-size: 2rem;
+        margin-top: 80px;
+        padding: 0 10px;
+        text-align: center;
+    }
+
+    .info-box {
+        width: 90%;
+        padding: 20px 15px;
+        font-size: 16px;
+        line-height: 1.6;
+        margin: 15px auto;
+    }
+
+    .info-box h2 {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .footer-logo {
+        width: 100px;
+    }
+
+    .footer-col {
+        padding: 10px 0;
+    }
+
+    .menu-btn {
+        margin-right: 10px;
+    }
+}
+
+
+/* Footer Styles */
+footer {
+    width: 100%;
+    background: #1a1a1a;
+    color: #fff;
+    padding: 15px 0;
+    /* Reduced padding to make it thinner */
+    font-size: 16px;
+}
+
+/* Adjusted Space Between "Meet the Team" and Footer */
+.team-crew {
+    margin-bottom: 80px;
+    /* Slightly more space before the footer */
+}
+
+.footer-container {
+    width: 85%;
+    margin: auto;
+}
+
+.footer-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+/* Left Column (Logo & Description) */
+.footer-col {
+    flex: 1;
+    padding: 5px;
+    /* Reduced padding for a thinner look */
+}
+
+.logo-col {
+    text-align: left;
+}
+
+.footer-logo {
+    width: 150px;
+    /* Slightly smaller logo */
+    height: auto;
+    margin-bottom: 8px;
+    /* Less space below logo */
+}
+
+.footer-desc {
+    font-size: 13px;
+    /* Slightly smaller text */
+    color: #bbb;
+    max-width: 250px;
+}
+
+/* Middle Column (Navigation Links) */
+.links-col {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.footer-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 25px;
+    /* Adjusted spacing */
+}
+
+.footer-links li {
+    display: inline;
+}
+
+.footer-links a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 17px;
+    /* Adjusted font size */
+    font-weight: 600;
+    transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+    color: #f44336;
+}
+
+/* Right Column (Google Map) */
+.map-col {
+    text-align: right;
+}
+
+.map-col iframe {
+    width: 400px;
+    /* Slightly reduced map size */
+    height: 250px;
+    border-radius: 8px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .footer-row {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .logo-col,
+    .links-col,
+    .map-col {
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    .footer-links {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .map-col iframe {
+        width: 100%;
+        height: 220px;
+    }
+}
     </style>
 </head>
 
@@ -106,6 +372,30 @@
             </li>
         </ol>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-row">
+                <!-- Left Column: Logo & Description -->
+                <div class="footer-col logo-col">
+                    <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="footer-logo">
+                    <p class="footer-desc">TEDxMITWPU brings inspiring ideas to life, fostering meaningful conversations.</p>
+                </div>
+    
+                <!-- Middle Column: Navigation Links -->
+                <div class="footer-col links-col">
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="team.html">Team</a></li>
+                        <li><a href="pastevent.html">Past Events</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="guidelines.html">Guidelines</a></li>
+                        <li><a href="#">Brochure</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
