--- a/pastevent.html
+++ b/pastevent.html
@@ -31,7 +31,7 @@
     }
     
     body {
-      background: black;
+      background: #121212;
       background-image: url('images/Past\ edition\ with\ thread.svg');
       background-repeat: no-repeat;
       background-size: cover;
