--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: rgba(0, 0, 0, 0.8);
+        background: var(--header-bg);
         z-index: 1000;
       }
 
@@ -109,7 +109,7 @@
       }
 
       /* Team Section Styles */
-     .team-section {
+      .team-section {
         padding: 4rem 2rem;
         max-width: var(--max-width);
         margin: 0 auto;
@@ -128,7 +128,6 @@
         letter-spacing: 3px;
         position: relative;
       }
-
 
       .team-grid {
         display: grid;
@@ -378,16 +377,15 @@
       <nav>
         <div class="nav-left">
           <a href="index.html" class="logo-link">
-            <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
+            <img src="tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
           </a>
         </div>
         <ul class="nav-links" id="navLinks">
           <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="team.html">Team</a></li>               
-                <li><a href="pastevent.html">Past Event</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="guidelines.html">Guidelines</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="team.html">Team</a></li>
+          <li><a href="pastevent.html">Past Events</a></li>
+          <li><a href="#">Brochure</a></li>
         </ul>
         <div class="menu-btn" id="hamburger">☰</div>
       </nav>
@@ -496,30 +494,34 @@
         </section>
       </main>
 
+      <!-- Footer -->
       <footer>
         <div class="footer-container">
-            <div class="footer-row">
-                <!-- Left Column: Logo & Description -->
-                <div class="footer-col logo-col">
-                    <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="footer-logo">
-                    <p class="footer-desc">TEDxMITWPU brings inspiring ideas to life, fostering meaningful conversations.</p>
-                </div>
-    
-                <!-- Middle Column: Navigation Links -->
-                <div class="footer-col links-col">
-                    <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutus.html">About Us</a></li>
-                        <li><a href="team.html">Team</a></li>
-                        <li><a href="pastevent.html">Past Events</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="guidelines.html">Guidelines</a></li>
-                        <li><a href="#">Brochure</a></li>
-                    </ul>
-                </div>
+          <div class="footer-row">
+            <!-- Left Column: Logo & Description -->
+            <div class="footer-col logo-col">
+              <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="footer-logo">
+              <p class="footer-desc">TEDxMITWPU brings inspiring ideas to life, fostering meaningful conversations.</p>
             </div>
+
+            <!-- Middle Column: Navigation Links -->
+            <div class="footer-col links-col">
+              <ul class="footer-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="pastevent.html">Past Events</a></li>
+                <li><a href="#">Brochure</a></li>
+              </ul>
+            </div>
+
+            <!-- Right Column: Google Maps -->
+            <div class="footer-col map-col">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.2465831890463!2d73.81511119999999!3d18.5177559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bfb9e53a05f9%3A0x2be5e8da02be693e!2sMIT%20World%20Peace%20University%20(MIT-WPU)!5e0!3m2!1sen!2sin!4v1743435254352!5m2!1sen!2sin" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
     </div>
 
     <script>
