--- a/team.html
+++ b/team.html
@@ -37,6 +37,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        font-family: "Barlow-Regular", sans-serif;
         color: white;
       }
 
@@ -382,10 +383,11 @@
         </div>
         <ul class="nav-links" id="navLinks">
           <li><a href="index.html">Home</a></li>
-          <li><a href="aboutus.html">About Us</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="pastevent.html">Past Events</a></li>
-          <li><a href="#">Brochure</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="pastevent.html">Past Event</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="guidelines.html">Guidelines</a></li>
         </ul>
         <div class="menu-btn" id="hamburger">☰</div>
       </nav>
