--- a/team.html
+++ b/team.html
@@ -39,6 +39,7 @@
         justify-content: center;
         font-family: "Barlow-Regular", sans-serif;
         color: white;
+        overflow-x: hidden; /* Prevent horizontal scrolling */
       }
 
       /* Header/Navbar Styles */
@@ -194,7 +195,7 @@
 
       /* Footer Styles */
       footer {
-        width: 100vw; /* Ensure the footer spans the full viewport width */
+        width: 100%; /* Ensure the footer spans the full viewport width */
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
