--- a/team.html
+++ b/team.html
@@ -39,7 +39,6 @@
         justify-content: center;
         font-family: "Barlow-Regular", sans-serif;
         color: white;
-        overflow-x: hidden; /* Prevent horizontal scrolling */
       }
 
       /* Header/Navbar Styles */
@@ -195,7 +194,7 @@
 
       /* Footer Styles */
       footer {
-        width: 100%; /* Ensure the footer spans the full viewport width */
+        width: 100vw; /* Ensure the footer spans the full viewport width */
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
