--- a/team.html
+++ b/team.html
@@ -393,6 +393,7 @@
                 <li><a href="pastevent.html">Past Event</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="guidelines.html">Guidelines</a></li>
+                <li><a href="brochure.pdf">Brochure</a></li>
         </ul>
         <div class="menu-btn" id="hamburger">☰</div>
       </nav>
@@ -519,7 +520,7 @@
                         <li><a href="pastevent.html">Past Events</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="guidelines.html">Guidelines</a></li>
-                        <li><a href="#">Brochure</a></li>
+                        <li><a href="brochure.pdf">Brochure</a></li>
                     </ul>
                 </div>
             </div>
