--- a/ticket/register.html
+++ b/ticket/register.html
@@ -1,85 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - TEDxMITWPU</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="register.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Register - TEDxMITWPU</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="register.css" />
 </head>
+
 <body>
-    <div class="register-container">
-        <h2>Register for TEDxMITWPU</h2>
-        <form id="registrationForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" placeholder="Enter your full name" required>
-            </div>
+  <div class="register-container">
+    <h2>Register for TEDxMITWPU</h2>
+    <form id="registrationForm">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your full name" required />
+      </div>
 
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Enter your email" required>
-            </div>
+      <div class="form-group">
+        <label for="college">College Name / Institute Name:</label>
+        <input type="text" id="college" name="college" placeholder="Enter your college or institute name" required />
+      </div>
 
-            <div class="form-group">
-                <label for="phone">Phone No.:</label>
-                <input type="tel" id="phone" placeholder="Enter your phone number" required>
-            </div>
+      <div class="form-group">
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" placeholder="Enter your city" required />
+      </div>
 
-            <div class="form-group">
-                <label for="age">Age:</label>
-                <input type="number" id="age" placeholder="Enter your age" required>
-            </div>
+      <div class="form-group">
+        <label for="phone">Mobile No.:</label>
+        <input type="tel" id="phone" name="phone" placeholder="Enter your mobile number" required />
+      </div>
 
-            <div class="form-group">
-                <label for="gender">Gender:</label>
-                <select id="gender" required>
-                    <option value="" disabled selected>Select your gender</option>
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="Other">Other</option>
-                </select>
-            </div>
+      <div class="form-group">
+        <label for="email">Email ID:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email ID" required />
+      </div>
 
-            <div class="form-group">
-                <label>Are you an MIT WPU student?</label>
-                <div class="radio-group">
-                    <input type="radio" id="mitYes" name="mitStudent" value="Yes" required onclick="toggleCollegeField()">
-                    <label for="mitYes">Yes</label>
-                    <input type="radio" id="mitNo" name="mitStudent" value="No" onclick="toggleCollegeField()">
-                    <label for="mitNo">No</label>
-                </div>
-            </div>
+      <div class="form-group">
+        <label for="ticket">Ticket Amount:</label>
+        <select id="ticket" name="ticket" required>
+          <option value="" disabled selected>Select ticket type</option>
+          <option value="1 Ticket - ₹495">1 Ticket - ₹495</option>
+          <option value="3 Ticket - ₹1335">3 Ticket - ₹1335</option>
+          <option value="5 Ticket - ₹2102">5 Ticket - ₹2102</option>
+        </select>
+      </div>
 
-            <div class="form-group" id="collegeField" style="display: none;">
-                <label for="college">College Name:</label>
-                <input type="text" id="college" placeholder="Enter your college name">
-            </div>
+      <!-- Submit button -->
+      <button type="submit" class="pay-btn">Register</button>
+    </form>
+    <p id="responseMessage"></p>
+  </div>
 
-            <button type="submit">Register</button>
-        </form>
-        <p id="responseMessage"></p>
-    </div>
+  <!-- JS to handle form submission -->
+  <script>
+    document.getElementById("registrationForm").addEventListener("submit", function (e) {
+      e.preventDefault();
 
-    <!-- existing toggleCollegeField script -->
-<script>
-    function toggleCollegeField() {
-        const mitNo = document.getElementById("mitNo");
-        const collegeField = document.getElementById("collegeField");
-        collegeField.style.display = mitNo.checked ? "block" : "none";
-    }
-</script>
+      const name = document.getElementById("name").value.trim();
+      const college = document.getElementById("college").value.trim();
+      const city = document.getElementById("city").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const ticket = document.getElementById("ticket").value;
 
-<!-- link to JS -->
-<script src="register.js"></script>
-
-    <!-- <script>
-        fetch("footer.html")
-            .then(response => response.text())
-            .then(data => {
-                document.body.insertAdjacentHTML("beforeend", data);
-            });
-    </script> -->
-    
+      if (name && college && city && phone && email && ticket) {
+        document.getElementById("responseMessage").textContent = "Registration successful! Redirecting to payment...";
+        setTimeout(() => {
+          window.open("https://secure.paytmpayments.com/link/paymentForm/56367/LL_769711432", "_blank");
+        }, 1500);
+      } else {
+        document.getElementById("responseMessage").textContent = "Please fill in all fields before registering.";
+      }
+    });
+  </script>
 </body>
 </html>
