--- a/pastevent.html
+++ b/pastevent.html
@@ -497,6 +497,7 @@
         <li><a href="pastevent.html">Past Events</a></li>
         <li><a href="contact.html">Contact Us</a></li>
         <li><a href="guidelines.html">Guidelines</a></li>
+        <li><a href="brochure.pdf">Brochure</a></li>
       </ul>
       <div class="menu-btn" id="hamburger">☰</div>
     </nav>
