--- a/ticket/register.html
+++ b/ticket/register.html
@@ -97,7 +97,7 @@
           .then(function (response) {
             document.getElementById("responseMessage").textContent = "✅ Email sent. Redirecting to payment...";
             setTimeout(() => {
-              window.open("https://secure.paytmpayments.com/link/paymentForm/56367/LL_769711432", "_blank");
+              window.open("https://easypaynew.drcsystems.ooo/ccavenue/mit-university", "_blank");
             }, 1500);
           }, function (error) {
             console.error("EmailJS Error:", error);
