--- a/guidelines.html
+++ b/guidelines.html
@@ -372,6 +372,36 @@ footer {
                 credibility of the content presented.
             </li>
         </ol>
+
+        <h2 style="color: red; font-weight: bold; margin-bottom: 20px; margin-top: 50px;">3. Sponsorship Guidelines</h2>
+        <ol style="color: white; padding-left: 20px; line-height: 1.7;">
+            <li style="margin-bottom: 15px;">
+                <b>Sponsor Recognition:</b> Sponsors can be acknowledged on one static slide that adheres to TEDx's prescribed template. No animation, multiple slides, or rolling credits are allowed in videos.
+            </li>
+            <li style="margin-bottom: 15px;">
+                <b>Stage Branding:</b> No logos, other than the TEDx event's official logo, are allowed on stage. This ensures the focus remains on the ideas presented.
+            </li>
+            <li style="margin-bottom: 15px;">
+                <b>Editorial Independence:</b> Sponsors must not have editorial control over the event's content or speaker selection.
+            </li>
+        </ol>
+
+        <h2 style="color: red; font-weight: bold; margin-bottom: 20px; margin-top: 50px;">4. Rules for Audience
+            </h2>
+        <ol style="color: white; padding-left: 20px; line-height: 1.7;">
+            <li style="margin-bottom: 15px;">
+                While the official TEDx guidelines do not specify detailed rules for the audience, attendees are generally expected to:
+            </li>
+            <li style="margin-bottom: 15px;">
+                <b>Engage Respectfully:</b> Participate in the event with an open mind and respect for the speakers and fellow audience members.
+            </li>
+            <li style="margin-bottom: 15px;">
+                <b> Avoid Disruptions:</b> Refrain from any behaviour that could disrupt the presentations or the overall event experience.
+            </li>
+            <li style="margin-bottom: 15px;">
+                <b> Adhere to Event Policies:</b> Follow any specific guidelines set by the event organizers, such as policies on recording or photography.
+            </li>
+        </ol>
     </div>
     
 </body>
