--- a/guidelines.html
+++ b/guidelines.html
@@ -14,7 +14,7 @@
             color: #ffffff;
             margin: 0;
             padding: 0;
-            background-color: black;
+            background-color: #121212;
             background-image: url('images/guidelines.svg');
             background-repeat: no-repeat;
             background-position: center;
