--- a/guidelines.html
+++ b/guidelines.html
@@ -14,8 +14,8 @@
             color: #ffffff;
             margin: 0;
             padding: 0;
+            background: url('/images/Group 174.svg') no-repeat center center;
             background-color: #121212;
-            background-image: url('images/guidelines.svg');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
