--- a/index.html
+++ b/index.html
@@ -66,6 +66,45 @@
         </div>
     </div>
 
+     <section class="tedx-container">
+        <div class="left-box">
+          <div class="card">
+            <h2>What is TED ?</h2>
+            <p>
+              TED moves us – driving innovation, sparking curiosity, and reshaping perspectives.
+              It’s more than a platform; it’s a movement where ideas ignite change. A global
+              community, TED welcomes all who seek to understand and inspire. Leading with "Ideas
+              Change Everything", TED fuels conversations that transform the world. A stage, a story,
+              a spark – TED bridges thought and action in boundless ways. Where ideas converge, the future unfolds.
+            </p>
+          </div>
+          <!-- Know more button moved outside the card -->
+          <div class="btn-container">
+            <button class="btn"onclick="window.location.href='aboutus.html'">Know more</button>
+          </div>
+        </div>
+      
+        <div class="right-box">
+          <div class="card">
+            <h2>What is TEDx ?</h2>
+            <p>
+              TEDx events bring TED’s spirit to local communities, blending world-changing ideas with
+              meaningful conversations. Independently organised but TED-inspired, each event creates
+              a space where thinkers, doers, and changemakers connect.
+            </p>
+          </div>
+          <div class="card">
+            <h2>What is TEDxMITWPU ?</h2>
+            <p>
+              MIT World Peace University envisions a world shaped by tradition, innovation, and peace.
+              TEDx fosters change through ideas that inspire, transform and change. Together,
+              TEDxMITWPU brings these values to life—where knowledge meets wisdom, individuality meets
+              impact, and diverse identities weave a shared future.
+            </p>
+          </div>
+        </div>
+      </section>           
+
     <script src="index.js"></script>
     <script>
         fetch("footer.html")
