--- a/footer.html
+++ b/footer.html
@@ -145,7 +145,7 @@
                         <img src="images/instagram-icon.png" alt="Instagram" class="instagram-logo">
                     </a>
                     <a href="https://www.linkedin.com/company/tedxmitwpu" target="_blank" class="instagram-link">
-                        <img src="images/linkedin.png" alt="LinkedIn" class="instagram-logo">
+                        <img src="images/linkedin3.webp" alt="LinkedIn" class="instagram-logo">
                     </a>
                 </div>
             </div>
