--- a/aboutus.html
+++ b/aboutus.html
@@ -206,26 +206,37 @@
     </div>
 
     <script>
-      // Mobile menu toggle
-      document
-        .querySelector(".menu-btn")
-        .addEventListener("click", function () {
-          document.querySelector(".nav-links").style.display =
-            document.querySelector(".nav-links").style.display === "flex"
-              ? "none"
-              : "flex";
-        });
+      // Load footer
       fetch("footer.html")
         .then((response) => response.text())
         .then((data) => {
           document.body.insertAdjacentHTML("beforeend", data);
         });
-      const links = document.querySelectorAll(".nav-link");
-      const currentPage = location.pathname.split("/").pop();
+        const links = document.querySelectorAll('.nav-link');
+        const currentPage = location.pathname.split("/").pop();
 
-      links.forEach((link) => {
-        if (link.getAttribute("href") === currentPage) {
-          link.classList.add("active");
+        links.forEach(link => {
+          if(link.getAttribute("href") === currentPage) {
+            link.classList.add("active");
+          }
+        });
+        const menuBtn = document.querySelector(".menu-btn");
+      const navLinks = document.querySelector(".nav-links");
+      
+      menuBtn.addEventListener("click", function() {
+        if (navLinks.style.display === "flex") {
+          navLinks.style.display = "none";
+        } else {
+          navLinks.style.display = "flex";
+        }
+      });
+      
+      // Handle window resize to reset mobile menu state
+      window.addEventListener("resize", function() {
+        if (window.innerWidth > 768) {
+          navLinks.style.display = "flex";
+        } else {
+          navLinks.style.display = "none";
         }
       });
     </script>
