--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
       <!-- Founder's Thought -->
       <div class="intro-card reverse">
         <div class="intro-info">
-          <h3 class="intro-name">Founders Thought</h3>
+          <h3 class="intro-name">Founder's Thought</h3>
           <div class="intro-content">
             <p>
               Like a horizon over the sea, identity expands and transforms with
