--- a/footer.html
+++ b/footer.html
@@ -15,10 +15,10 @@
                 <p class="instagram-text">Follow Us On</p>
                 <div class="instagram-icons">
                     <a href="https://www.instagram.com/TedxMITWPU" target="_blank" class="instagram-link">
-                        <img src="images/instagram1.svg" alt="Instagram" class="instagram-logo">
+                        <img src="images/instagram1.png" alt="Instagram" class="instagram-logo">
                     </a>
                     <a href="https://www.linkedin.com/company/tedxmitwpu" target="_blank" class="instagram-link">
-                        <img src="images/linkedin2.svg" alt="LinkedIn" class="instagram-logo">
+                        <img src="images/linkedin2.png" alt="LinkedIn" class="instagram-logo">
                     </a>
                 </div>
             </div>
