--- a/pastevent.html
+++ b/pastevent.html
@@ -72,12 +72,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: rgba(
-          0,
-          0,
-          0,
-          0.5
-        ); /* Adjust transparency for better visibility */
+        background: #121212; /* Adjust transparency for better visibility */
         z-index: 1000;
       }
 
