--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: rgba(0, 0, 0, 0.5);
+        background: #121212;
         z-index: 1000;
       }
 
@@ -578,7 +578,8 @@ footer {
     }
 
     .instagram-text {
-        font-size: 16px;
+      font-size: 17px;
+      font-weight: 600;
         color: #fff;
         margin-bottom: 10px;
     }
