--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         color: #ffffff;
         margin: 0;
         padding: 0;
-        background-color: black;
+        background-color: #1a1a1a;
         background-image: url("images/contact.svg");
         background-repeat: no-repeat;
         background-position: center;
@@ -151,7 +151,7 @@
         padding: 2px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
