--- a/guidelines.html
+++ b/guidelines.html
@@ -15,7 +15,7 @@
             margin: 0;
             padding: 0;
             background: url('/images/Group 174.svg') no-repeat center center;
-            background-color: #121212;
+            background-color: #1a1a1a;
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -172,7 +172,7 @@
 
 /* Footer Styles */
 footer {
-    width: 100%;
+    width: 87%;
     background: #1a1a1a;
     color: #fff;
     padding: 15px 0;
@@ -389,7 +389,7 @@ footer {
         padding: 2px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
@@ -537,7 +537,7 @@ footer {
 
       /* Footer Styles */
       footer {
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
@@ -658,7 +658,7 @@ footer {
         padding: 2px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
@@ -805,7 +805,7 @@ footer {
 }
       /* Footer Styles */
       footer {
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
@@ -926,7 +926,7 @@ footer {
         padding: 2px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
