--- a/pastevent.html
+++ b/pastevent.html
@@ -32,7 +32,7 @@
       }
 
       body {
-        background: black;
+        background: #1a1a1a;
         background-image: url("images/Past\ edition\ with\ thread.svg");
         background-repeat: no-repeat;
         background-size: cover;
@@ -293,7 +293,7 @@
 
       /* Footer Styles */
       footer {
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
@@ -687,7 +687,7 @@ footer {
         padding: 2px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
