--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
       }
 
       body {
-        background-color: #121212; /* Fallback color */
+        background-color: #1a1a1a; /* Fallback color */
         min-height: 100vh;
         width: 100%;
         display: flex;
@@ -56,7 +56,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: #121212;
+        background: #1a1a1a;
         z-index: 1000;
       }
 
@@ -392,7 +392,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: #121212;
+    background-color: #1a1a1a;
     padding-bottom: 20px;
   }
 
@@ -581,7 +581,7 @@ footer {
         padding: 2px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 87%;
         background: #1a1a1a;
         color: #fff;
         padding: 15px 0;
