changes from meeting

--- a/footer.html
+++ b/footer.html
@@ -36,5 +36,6 @@
                 </ul>
             </div>
         </div>
+        <div class="copyright" style="display: flex;justify-content: center;align-items: center; position: relative; left: 250px;font-size: 12px;color: #bbb;">TEDxMITWPU© 2025 - All Rights Reserved</div>
     </div>
 </footer>
