--- a/guidelines.html
+++ b/guidelines.html
@@ -14,12 +14,12 @@
             color: #ffffff;
             margin: 0;
             padding: 0;
-            background: url('/images/Group 174.svg') no-repeat center center;
-            background-color: #1a1a1a;
+            background: #1a1a1a;
+            /* background-color: #1a1a1a;
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
-            background-attachment: fixed;
+            background-attachment: fixed; */
             min-height: 100vh;
             overflow-x: hidden;
         }
@@ -1071,6 +1071,19 @@ footer {
     font-size: 14px; /* Adjust font size for smaller screens */
   }
 }
+.guidelines1{
+  position: relative;
+  bottom: 25px;
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s;
+}
+.guidelines1:hover{
+  color: #ff2b06;
+}
+
+
     </style>
 </head>
 
@@ -1094,10 +1107,10 @@ footer {
             <div class="menu-btn">☰</div>
         </nav>
     </header>
-    <h1>Guidelines</h1>
-
+    
     <div
-        style="background-color: rgba(255, 255, 255, 0.1); padding: 30px; margin: 40px auto; max-width: 1000px; border-radius: 15px;">
+    style="background-color: rgba(255, 255, 255, 0.1); padding: 30px; margin: 40px auto; max-width: 1000px; border-radius: 15px;">
+    <a class="guidelines1" href="https://www.ted.com/participate/organize-a-local-tedx-event/before-you-start/tedx-rules"><h1 style="text-decoration: underline red;">Guidelines</h1></a>
         <h2 style="color: red; font-weight: bold; margin-bottom: 20px; margin-top: 15px;">1. Organization Guidelines
         </h2>
         <p style="color: white;">
