--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ window.onload = function () {
       </div>
       <p class="description">The invisible threads that shape us</p>
       <!-- <div class="btn1-container"> -->
-      <a href="ticket/register.html" class="btn1"><b>BOOK NOW</b></a>
+      <a href="https://formbuilder.ccavenue.com/live/ccavenue/mit-university" class="btn1"><b>BOOK NOW</b></a>
       <!-- </div> -->
     </div>
   </section>
