Changes to banner

--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
         display: block;
       }
     }
+/* 
 
-
-    /* Footer Styles */
+    Footer Styles
     footer {
       width: 92%;
       background: #1a1a1a;
@@ -339,7 +339,7 @@
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-    }
+    } */
     /* * {
       margin: 0;
       padding: 0;
@@ -362,7 +362,7 @@
       width: 100vw;
       background-color: black;
       padding: 20px;
-      background-image: url(images/group.svg); /* Use a valid image path */
+      background-image: url(images/group.svg); Use a valid image path
       background-size: cover;
       background-repeat: no-repeat;
       background-position: right center;
@@ -370,7 +370,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 40px;
-      /* outline: 3px solid red; Debug border to see full width */
+      outline: 3px solid red; Debug border to see full width
     } */
 
     @media (max-width: 1298px) {
