book now button alignment

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section class="hero">
 
     <div class="content">
-      <img src="images/IMG_2748.PNG" alt="TEDxMITWPU Logo" class="logo hero-logo">
+      <img src="images/IMG_2748.PNG" alt="TEDxMITWPU Logo" class="hero-logo">
       <div class="hero-text">
         <h1 id="typewriter"></h1>
       </div>
