--- a/contact.html
+++ b/contact.html
@@ -364,6 +364,7 @@ footer {
 @media screen and (max-width: 768px) {
     footer {
         width: 100%;
+        flex-direction: column;
     }
     
     .footer-container {
