--- a/guidelines.html
+++ b/guidelines.html
@@ -1150,10 +1150,11 @@ footer {
 @media screen and (max-width: 768px) {
     footer {
         width: 100%;
+        flex-direction: column;
     }
     
     .footer-container {
-        width: 95%;
+        width: 100%;
     }
     
     .logo-col, .instagram-col {
