--- a/index.html
+++ b/index.html
@@ -1223,6 +1223,7 @@ footer {
     footer {
         width: 100%;
         margin-right: 50%;
+        flex-direction: column;
     }
     
     .footer-container {
@@ -1268,9 +1269,6 @@ header {
   width: 100%;
   z-index: 1000;
 }
-
-
-
 
   </style>
   <script>
