--- a/pastevent.html
+++ b/pastevent.html
@@ -904,6 +904,7 @@
       @media screen and (max-width: 768px) {
         footer {
           width: 100%;
+          flex-direction: column;
         }
 
         .footer-container {
